k8s/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sk015-walktogether
  namespace: skala-practice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sk015-walktogether
  template:
    metadata:
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8081'
        prometheus.io/path: '/actuator/prometheus'
        update: b4b0bfcf04c7cd0f658321d02714cb5d
      labels:
        app: sk015-walktogether
    spec:
      serviceAccountName: default
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - sk015-walktogether
              topologyKey: kubernetes.io/hostname
      tolerations:
      - key: skala-k8s-practice
        operator: Equal
        value: "yes"
        effect: NoSchedule
      - key: control-plane
        operator: Exists
        effect: NoSchedule

      containers:
      - name: walktogether
        image: amdp-registry.skala-ai.com/skala25a/sk015-walktogether:latest-24-f6d899d6252c
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
          limits:
            cpu: "500m"

        ports:
        - containerPort: 8080
        - containerPort: 8081

        livenessProbe:
          httpGet:
            path: /actuator/health/liveness
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 3
          failureThreshold: 2

        readinessProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8081
          initialDelaySeconds: 5
          periodSeconds: 3
          failureThreshold: 2

        startupProbe:
          httpGet:
            path: /actuator/health/readiness
            port: 8081
          initialDelaySeconds: 60
          periodSeconds: 3
          failureThreshold: 2
