k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sk015-tls-ingress
  namespace: skala-practice
spec:
  ingressClassName: public-nginx
  tls:
  - hosts:
    - sk015-tls.skala25a.project.skala-ai.com
    secretName: sk015-ingress-tls-secret
  rules:
  - host: sk015-tls.skala25a.project.skala-ai.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: walktogether
            port:
              number: 8080
      - path: /walktogether
        pathType: Prefix
        backend:
          service:
            name: walktogether
            port:
              number: 8080

      - path: /actuator
        pathType: Prefix
        backend:
          service:
            name: walktogether
            port:
              number: 8080

      - path: /swagger-ui
        pathType: Prefix
        backend:
          service:
            name: walktogether
            port:
              number: 8080
  tls:
  - hosts:
    - sk015-tls.skala25a.project.skala-ai.com
    secretName: sk015-cm-auto-tls-secret
